overlays/production/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
        labels:
                app: todonodejs
                name: frontend
         name: frontend
spec:
  host: todo.apps.ocp4-mng.example.com
  path: "/todo"
  to:
                                kind: Service
                                name: prod-frontend
                                weight: 100
  wildcardPolicy: None
